test/unit/syntax-err/input.js
// if (typeof __filename > 'undefine') {
  +